Created a simple content and a new branch. Edit the summary.

--- a/Assignment-3.html
+++ b/Assignment-3.html
@@ -40,10 +40,23 @@ ul.task-list li input[type="checkbox"] {
 
 </head>
 
-<body class="fullcontent">
+<body>
 
 <div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
-
+<div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+  <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">Table of contents</h2>
+   
+  <ul>
+  <li><a href="#executive-summary" id="toc-executive-summary" class="nav-link active" data-scroll-target="#executive-summary"><strong>Executive summary</strong></a></li>
+  <li><a href="#introduction" id="toc-introduction" class="nav-link" data-scroll-target="#introduction"><strong>Introduction</strong></a></li>
+  <li><a href="#methodology" id="toc-methodology" class="nav-link" data-scroll-target="#methodology"><strong>Methodology</strong></a></li>
+  <li><a href="#results" id="toc-results" class="nav-link" data-scroll-target="#results"><strong>Results</strong></a></li>
+  <li><a href="#discussion-conclusion-and-recommendations" id="toc-discussion-conclusion-and-recommendations" class="nav-link" data-scroll-target="#discussion-conclusion-and-recommendations"><strong>Discussion, conclusion and recommendations</strong></a></li>
+  <li><a href="#reference-section" id="toc-reference-section" class="nav-link" data-scroll-target="#reference-section"><strong>Reference section</strong></a></li>
+  </ul>
+</nav>
+</div>
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
@@ -73,23 +86,35 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="table-of-contents" class="level3">
-<h3 class="anchored" data-anchor-id="table-of-contents"><strong>Table of contents:</strong></h3>
-<p>Defining using adequate YAML syntax</p>
-<p><strong>Executive summary:</strong></p>
-<p>Maximum of 4 sentences</p>
-<p><strong>Introduction:</strong></p>
+<section id="executive-summary" class="level1">
+<h1><strong>Executive summary</strong></h1>
+<p>(Maximum of 4 sentences)</p>
+<p>Studying the relationship between life expectancy and the Gini coefficient is essentially exploring the connection between economic inequality and health inequality.</p>
+<p>In this era that emphasizes economic development, people’s physical health should be equally prioritized.</p>
+<p>By comparing the Gini coefficients and life expectancies across different economies and regions, we can gain a more intuitive and comprehensive understanding of a particular economy or region’s development level.</p>
+<p>Furthermore, researching the relationship between these inequalities can provide new directions for economic development goals.</p>
+</section>
+<section id="introduction" class="level1">
+<h1><strong>Introduction</strong></h1>
 <p>Maximum 10 sentences</p>
 <ul>
 <li>The body of the report should contain the following sections:</li>
 </ul>
-<p><strong>Methodology:</strong></p>
+</section>
+<section id="methodology" class="level1">
+<h1><strong>Methodology</strong></h1>
 <p>Maximum 300 words</p>
 <p>Should include a figure and a table and those must be referenced in the text and have adequate captions</p>
-<p><strong>Results:</strong></p>
+</section>
+<section id="results" class="level1">
+<h1><strong>Results</strong></h1>
 <p>Maximum 200 words. Should include either a figure or a table.</p>
-<p><strong>Discussion, conclusion and recommendations</strong></p>
-<p><strong>Reference section:</strong></p>
+</section>
+<section id="discussion-conclusion-and-recommendations" class="level1">
+<h1><strong>Discussion, conclusion and recommendations</strong></h1>
+</section>
+<section id="reference-section" class="level1">
+<h1><strong>Reference section</strong></h1>
 <p>Include at least 1 reference.</p>
 </section>
 
