--- a/Assignment-3.html
+++ b/Assignment-3.html
@@ -49,7 +49,11 @@ ul.task-list li input[type="checkbox"] {
    
   <ul>
   <li><a href="#executive-summary" id="toc-executive-summary" class="nav-link active" data-scroll-target="#executive-summary"><strong>Executive summary</strong></a></li>
-  <li><a href="#introduction" id="toc-introduction" class="nav-link" data-scroll-target="#introduction"><strong>Introduction</strong></a></li>
+  <li><a href="#introduction" id="toc-introduction" class="nav-link" data-scroll-target="#introduction"><strong>Introduction</strong></a>
+  <ul class="collapse">
+  <li><a href="#research-question" id="toc-research-question" class="nav-link" data-scroll-target="#research-question"><strong>Research Question</strong></a></li>
+  <li><a href="#dataset-introduction" id="toc-dataset-introduction" class="nav-link" data-scroll-target="#dataset-introduction"><strong>Dataset introduction</strong></a></li>
+  </ul></li>
   <li><a href="#methodology" id="toc-methodology" class="nav-link" data-scroll-target="#methodology"><strong>Methodology</strong></a></li>
   <li><a href="#results" id="toc-results" class="nav-link" data-scroll-target="#results"><strong>Results</strong></a></li>
   <li><a href="#discussion-conclusion-and-recommendations" id="toc-discussion-conclusion-and-recommendations" class="nav-link" data-scroll-target="#discussion-conclusion-and-recommendations"><strong>Discussion, conclusion and recommendations</strong></a></li>
@@ -88,7 +92,6 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="executive-summary" class="level1">
 <h1><strong>Executive summary</strong></h1>
-<p>(Maximum of 4 sentences)</p>
 <p>Studying the relationship between life expectancy and the Gini coefficient is essentially exploring the connection between economic inequality and health inequality.</p>
 <p>In this era that emphasizes economic development, people’s physical health should be equally prioritized.</p>
 <p>By comparing the Gini coefficients and life expectancies across different economies and regions, we can gain a more intuitive and comprehensive understanding of a particular economy or region’s development level.</p>
@@ -96,10 +99,21 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="introduction" class="level1">
 <h1><strong>Introduction</strong></h1>
-<p>Maximum 10 sentences</p>
+<section id="research-question" class="level2">
+<h2 class="anchored" data-anchor-id="research-question"><strong>Research Question</strong></h2>
+<p>In this study, we will explore whether reducing economic inequality contributes to mitigating disparities in life expectancy.</p>
+<p>The Gini coefficient is a key indicator for measuring economic inequality within a country or region.Therefore, by examining the relationship between the Gini coefficient and life expectancy, we aim to assess the importance of balanced economic development.</p>
+</section>
+<section id="dataset-introduction" class="level2">
+<h2 class="anchored" data-anchor-id="dataset-introduction"><strong>Dataset introduction</strong></h2>
+<p>We utilize <strong>life expectancy</strong> data from <strong>Our World</strong> in Data and <strong>Gini coefficient</strong> data from <strong>the World Bank</strong>, spanning 1990 to 2020 and covering multiple countries and regions.</p>
 <ul>
-<li>The body of the report should contain the following sections:</li>
+<li><p>The body of the report should contain the following sections:</p>
+<p><strong>Methodology</strong>: How we processed the data.</p>
+<p><strong>Results</strong>: What conclusions we reached.</p>
+<p><strong>Discussion, conclusion and recommendations</strong>: Our Intended Message.</p></li>
 </ul>
+</section>
 </section>
 <section id="methodology" class="level1">
 <h1><strong>Methodology</strong></h1>
